--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bluesky Post Generator</title>
+    <title>Bluesky Image Post Generator</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <link rel="stylesheet" href="css/styles.css">
@@ -18,7 +18,7 @@
                         <div class="w-8 h-8 bg-blue-500 rounded-full flex items-center justify-center">
                             <span class="text-white font-bold text-sm">B</span>
                         </div>
-                        <h1 class="text-xl font-bold text-gray-900 dark:text-white">Bluesky Post Generator</h1>
+                        <h1 class="text-xl font-bold text-gray-900 dark:text-white">Bluesky Image Post Generator</h1>
                     </div>
                     <button id="theme-toggle" class="p-2 rounded-lg bg-gray-100 dark:bg-gray-700 text-gray-600 dark:text-gray-300 hover:bg-gray-200 dark:hover:bg-gray-600 transition-colors">
                         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -53,6 +53,44 @@
                                     <input type="radio" name="post-type" value="reply" class="mr-2">
                                     <span class="text-sm text-gray-700 dark:text-gray-300">Reply</span>
                                 </label>
+                            </div>
+                        </div>
+
+                        <!-- Social Handle Input -->
+                        <div class="mb-6">
+                            <h3 class="text-md font-medium text-gray-900 dark:text-white mb-3">Social Handle</h3>
+                            <div class="space-y-4">
+                                <div>
+                                    <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Bluesky Handle</label>
+                                    <div class="flex space-x-2">
+                                        <input type="text" id="social-handle" placeholder="@username.bsky.social" class="flex-1 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md bg-white dark:bg-gray-700 text-gray-900 dark:text-white focus:ring-2 focus:ring-blue-500 focus:border-transparent">
+                                        <button id="fetch-posts-btn" class="px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 transition-colors text-sm">Fetch Posts</button>
+                                    </div>
+                                    <p class="text-xs text-gray-500 dark:text-gray-400 mt-1">Enter a Bluesky handle to fetch their posts</p>
+                                </div>
+                                <div>
+                                    <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Or Direct Post URL</label>
+                                    <input type="url" id="post-url" placeholder="https://bsky.app/profile/username.bsky.social/post/..." class="w-full px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md bg-white dark:bg-gray-700 text-gray-900 dark:text-white focus:ring-2 focus:ring-blue-500 focus:border-transparent">
+                                    <p class="text-xs text-gray-500 dark:text-gray-400 mt-1">Paste a direct Bluesky post URL</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Post Selection -->
+                        <div id="post-selection" class="mb-6 hidden">
+                            <h3 class="text-md font-medium text-gray-900 dark:text-white mb-3">Select a Post</h3>
+                            <div class="space-y-3">
+                                <div class="flex items-center justify-between">
+                                    <span class="text-sm text-gray-600 dark:text-gray-400">Found posts:</span>
+                                    <div class="flex space-x-2">
+                                        <button id="prev-page" class="px-2 py-1 bg-gray-500 text-white rounded text-xs disabled:opacity-50">←</button>
+                                        <span id="page-info" class="text-xs text-gray-600 dark:text-gray-400">1 of 1</span>
+                                        <button id="next-page" class="px-2 py-1 bg-gray-500 text-white rounded text-xs disabled:opacity-50">→</button>
+                                    </div>
+                                </div>
+                                <div id="posts-list" class="space-y-2 max-h-60 overflow-y-auto">
+                                    <!-- Posts will be loaded here -->
+                                </div>
                             </div>
                         </div>
 
@@ -112,6 +150,10 @@
                         <!-- Engagement Metrics -->
                         <div class="mb-6">
                             <h3 class="text-md font-medium text-gray-900 dark:text-white mb-3">Engagement Metrics</h3>
+                            <div class="flex items-center justify-between mb-3">
+                                <span class="text-sm text-gray-600 dark:text-gray-400">Randomize metrics for realistic posts</span>
+                                <button id="randomize-metrics" class="px-3 py-1 bg-green-500 text-white rounded-md hover:bg-green-600 transition-colors text-sm">🎲 Randomize</button>
+                            </div>
                             <div class="grid grid-cols-3 gap-4">
                                 <div>
                                     <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Reposts</label>
@@ -169,5 +211,6 @@
     <script src="js/post-generator.js"></script>
     <script src="js/image-handler.js"></script>
     <script src="js/export-handler.js"></script>
+    <script src="js/post-fetcher.js"></script>
 </body>
 </html>
