(fix)-update light and dark mode for the preview image

--- a/site/index.html
+++ b/site/index.html
@@ -268,7 +268,7 @@
                 <div class="space-y-6">
                     <div class="bg-white dark:bg-gray-800 rounded-lg shadow-sm border border-gray-200 dark:border-gray-700 p-6">
                         <h2 class="text-lg font-semibold text-gray-900 dark:text-white mb-4">Preview</h2>
-                        <div id="post-preview" class="bg-white dark:bg-gray-900 rounded-lg border border-gray-200 dark:border-gray-700 p-4">
+                        <div id="post-preview" class="rounded-lg border p-4 light">
                             <!-- Post content will be generated here -->
                         </div>
                     </div>
