--- a/site/test.html
+++ b/site/test.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bluesky Image Post Generator - Test</title>
+    <title>Bluesky Post Image Generator - Test</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="bg-gray-50 dark:bg-gray-900 p-8">
     <div class="max-w-4xl mx-auto">
-        <h1 class="text-3xl font-bold text-gray-900 dark:text-white mb-8">Bluesky Image Post Generator - Test Page</h1>
+        <h1 class="text-3xl font-bold text-gray-900 dark:text-white mb-8">Bluesky Post Image Generator - Test Page</h1>
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
             <!-- Test Controls -->
