--- a/site/index.html
+++ b/site/index.html
@@ -14,17 +14,14 @@
         <header class="bg-white dark:bg-gray-800 shadow-sm border-b border-gray-200 dark:border-gray-700">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="flex justify-between items-center py-4">
-                    <div class="flex items-center space-x-3">
-                        <div class="w-8 h-8 bg-blue-500 rounded-full flex items-center justify-center">
-                            <img src="assets/icon.png" alt="Bluesky Post Image Generator" class="w-full h-full object-cover">
+                    <div class="flex items-center space-x-4">
+                        <div class="flex items-center space-x-2">
+                            <div class="w-8 h-8 bg-blue-500 rounded-lg flex items-center justify-center">
+                                <img src="assets/icon.png" alt="Bluesky Post Image Generator" class="w-full h-full object-cover">
+                            </div>
+                            <h1 class="text-xl font-bold text-gray-900 dark:text-white">Bluesky Post Image Generator</h1>
                         </div>
-                        <h1 class="text-xl font-bold text-gray-900 dark:text-white">Bluesky Post Image Generator</h1>
                     </div>
-                    <button id="theme-toggle" class="p-2 rounded-lg bg-gray-100 dark:bg-gray-700 text-gray-600 dark:text-gray-300 hover:bg-gray-200 dark:hover:bg-gray-600 transition-colors">
-                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path>
-                        </svg>
-                    </button>
                 </div>
             </div>
         </header>
