Fix avatar display in Create from existing post flow - Add avatar proxy endpoint to handle CORS issues - Replace SVG logo with official Bluesky PNG - Remove references to non-existent default avatar file

--- a/site/index.html
+++ b/site/index.html
@@ -101,7 +101,7 @@
                                         <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Avatar</label>
                                         <div class="flex items-center space-x-4">
                                             <div class="w-12 h-12 rounded-full bg-gray-300 dark:bg-gray-600 flex items-center justify-center overflow-hidden">
-                                                <img id="avatar-preview" src="assets/default-avatar.png" alt="Avatar" class="w-full h-full object-cover hidden">
+                                                <img id="avatar-preview" alt="Avatar" class="w-full h-full object-cover hidden">
                                                 <span id="avatar-placeholder" class="text-gray-500 dark:text-gray-400 text-lg">👤</span>
                                             </div>
                                             <input type="file" id="avatar-upload" accept="image/*" class="hidden">
