--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bluesky Post Image Generator</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Bluesky Post Image Generator - Create Realistic Bluesky Mockups</title>
+    <meta name="title" content="Bluesky Post Image Generator - Create Realistic Bluesky Mockups">
+    <meta name="description" content="Free, open-source tool for creating realistic Bluesky post mockups and generating images from existing posts. Built with vanilla JavaScript and Tailwind CSS.">
+    <meta name="keywords" content="bluesky, post generator, mockup, social media, image generator, bluesky app, skeetgen">
+    <meta name="author" content="Bluesky Post Image Generator">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://skeetgen.bluedog.dev/">
+    <meta property="og:title" content="Bluesky Post Image Generator - Create Realistic Bluesky Mockups">
+    <meta property="og:description" content="Free, open-source tool for creating realistic Bluesky post mockups and generating images from existing posts. Built with vanilla JavaScript and Tailwind CSS.">
+    <meta property="og:image" content="https://skeetgen.bluedog.dev/assets/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="Bluesky Post Image Generator">
+    <meta property="og:locale" content="en_US">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://skeetgen.bluedog.dev/">
+    <meta property="twitter:title" content="Bluesky Post Image Generator - Create Realistic Bluesky Mockups">
+    <meta property="twitter:description" content="Free, open-source tool for creating realistic Bluesky post mockups and generating images from existing posts. Built with vanilla JavaScript and Tailwind CSS.">
+    <meta property="twitter:image" content="https://skeetgen.bluedog.dev/assets/og-image.png">
+
+    <!-- Additional Meta Tags -->
+    <meta name="theme-color" content="#0085FF">
+    <meta name="msapplication-TileColor" content="#0085FF">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="Bluesky Post Generator">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/icon.png">
+    <link rel="apple-touch-icon" href="assets/icon.png">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://skeetgen.bluedog.dev/">
+
+    <!-- Scripts -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <link rel="stylesheet" href="css/styles.css">
