--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
     <!-- Primary Meta Tags -->
     <title>Bluesky Post Image Generator - Create Realistic Bluesky Mockups</title>
     <meta name="title" content="Bluesky Post Image Generator - Create Realistic Bluesky Mockups">
-    <meta name="description" content="Free, open-source tool for creating realistic Bluesky post mockups and generating images from existing posts. Built with vanilla JavaScript and Tailwind CSS.">
+    <meta name="description" content="Free, open-source tool for creating realistic Bluesky post mockups and generating images from existing posts.">
     <meta name="keywords" content="bluesky, post generator, mockup, social media, image generator, bluesky app, skeetgen">
     <meta name="author" content="Bluesky Post Image Generator">
     <meta name="robots" content="index, follow">
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://skeetgen.bluedog.dev/">
     <meta property="og:title" content="Bluesky Post Image Generator - Create Realistic Bluesky Mockups">
-    <meta property="og:description" content="Free, open-source tool for creating realistic Bluesky post mockups and generating images from existing posts. Built with vanilla JavaScript and Tailwind CSS.">
+    <meta property="og:description" content="Free, open-source tool for creating realistic Bluesky post mockups and generating images from existing posts.">
     <meta property="og:image" content="https://skeetgen.bluedog.dev/assets/og-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -28,7 +28,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://skeetgen.bluedog.dev/">
     <meta property="twitter:title" content="Bluesky Post Image Generator - Create Realistic Bluesky Mockups">
-    <meta property="twitter:description" content="Free, open-source tool for creating realistic Bluesky post mockups and generating images from existing posts. Built with vanilla JavaScript and Tailwind CSS.">
+    <meta property="twitter:description" content="Free, open-source tool for creating realistic Bluesky post mockups and generating images from existing posts.">
     <meta property="twitter:image" content="https://skeetgen.bluedog.dev/assets/og-image.png">
 
     <!-- Additional Meta Tags -->
