--- a/site/index.html
+++ b/site/index.html
@@ -53,20 +53,32 @@
 
     <!-- Google Analytics (GA4) - Configure via environment variable -->
     <script>
-      // Check if Google Analytics ID is available (set via Cloudflare Workers environment variable)
-      const gaId = '{{GOOGLE_ANALYTICS_ID}}';
-      if (gaId && gaId !== '{{GOOGLE_ANALYTICS_ID}}' && gaId.trim() !== '') {
-        // Google Analytics 4 (GA4) tracking code
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', gaId, {
-          page_title: document.title,
-          page_location: window.location.href
+      // Fetch Google Analytics configuration from worker
+      fetch('/api/ga-config')
+        .then(response => response.json())
+        .then(config => {
+          if (config.enabled && config.id) {
+            // Google Analytics 4 (GA4) tracking code
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', config.id, {
+              page_title: document.title,
+              page_location: window.location.href
+            });
+
+            // Load GA script
+            const script = document.createElement('script');
+            script.async = true;
+            script.src = `https://www.googletagmanager.com/gtag/js?id=${config.id}`;
+            script.id = 'ga-script';
+            document.head.appendChild(script);
+          }
+        })
+        .catch(error => {
+          console.log('Google Analytics not configured or error loading config');
         });
-      }
     </script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id={{GOOGLE_ANALYTICS_ID}}" id="ga-script"></script>
 </head>
 <body class="bg-gray-50 dark:bg-gray-900 transition-colors duration-200">
     <div class="min-h-screen">
